{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 265,
  "lineage": "1a70d892-0725-5a5f-0f35-3c60ba68a64a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0182e997e2e0bbf24",
            "arn": "arn:aws:ec2:us-east-1:631306066855:elastic-ip/eipalloc-0182e997e2e0bbf24",
            "association_id": "eipassoc-0ceb1f31926597dd3",
            "domain": "vpc",
            "id": "eipalloc-0182e997e2e0bbf24",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05123d217c1848ebd",
            "private_dns": "ip-10-0-71-243.ec2.internal",
            "private_ip": "10.0.71.243",
            "public_dns": "ec2-52-200-84-228.compute-1.amazonaws.com",
            "public_ip": "52.200.84.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DevSecOps-nat"
            },
            "tags_all": {
              "Name": "DevSecOps-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:internet-gateway/igw-089a58cf9a1e8ec87",
            "id": "igw-089a58cf9a1e8ec87",
            "owner_id": "631306066855",
            "tags": {
              "Name": "DevSecOps-igw"
            },
            "tags_all": {
              "Name": "DevSecOps-igw"
            },
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0182e997e2e0bbf24",
            "association_id": "eipassoc-0ceb1f31926597dd3",
            "connectivity_type": "public",
            "id": "nat-0c67487c3667d0f3f",
            "network_interface_id": "eni-05123d217c1848ebd",
            "private_ip": "10.0.71.243",
            "public_ip": "52.200.84.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0255f164898f38f62",
            "tags": {
              "Name": "DevSecOps-nat"
            },
            "tags_all": {
              "Name": "DevSecOps-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:route-table/rtb-079ce4ddbc04cd30d",
            "id": "rtb-079ce4ddbc04cd30d",
            "owner_id": "631306066855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c67487c3667d0f3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevSecOps-private"
            },
            "tags_all": {
              "Name": "DevSecOps-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:route-table/rtb-081a7c2dc7c9adc12",
            "id": "rtb-081a7c2dc7c9adc12",
            "owner_id": "631306066855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089a58cf9a1e8ec87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevSecOps-public"
            },
            "tags_all": {
              "Name": "DevSecOps-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb4104bb4e3f2bec",
            "route_table_id": "rtb-079ce4ddbc04cd30d",
            "subnet_id": "subnet-00705e517cde40221"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641f051b1e58f0e4",
            "route_table_id": "rtb-079ce4ddbc04cd30d",
            "subnet_id": "subnet-0f0295e11043b8053"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c68f0aaf2142c767",
            "route_table_id": "rtb-081a7c2dc7c9adc12",
            "subnet_id": "subnet-0255f164898f38f62"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d8df8dc4684c9f",
            "route_table_id": "rtb-081a7c2dc7c9adc12",
            "subnet_id": "subnet-0fce6b698564db802"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2692816362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5d215dea572b8bc",
            "security_group_rule_id": "sgr-0518e866a61afda8b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks",
            "aws_iam_role_policy_attachment.eks",
            "aws_subnet.private_zone1",
            "aws_subnet.private_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_web_node_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30010,
            "id": "sgrule-746111431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5d215dea572b8bc",
            "security_group_rule_id": "sgr-05016fc824189e293",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30010,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks",
            "aws_iam_role_policy_attachment.eks",
            "aws_subnet.private_zone1",
            "aws_subnet.private_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:subnet/subnet-00705e517cde40221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00705e517cde40221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631306066855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevSecOps-private-us-east-1a",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DevSecOps-private-us-east-1a",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:subnet/subnet-0f0295e11043b8053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0295e11043b8053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631306066855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevSecOps-private-us-east-1b",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DevSecOps-private-us-east-1b",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:subnet/subnet-0255f164898f38f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0255f164898f38f62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631306066855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevSecOps-public-us-east-1a",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DevSecOps-public-us-east-1a",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:subnet/subnet-0fce6b698564db802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fce6b698564db802",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631306066855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevSecOps-public-us-east-1b",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DevSecOps-public-us-east-1b",
              "kubernetes.io/cluster/DevSecOps-microservices": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00ebb6f501340803c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631306066855:vpc/vpc-00ebb6f501340803c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa7f45a9488cadb3",
            "default_route_table_id": "rtb-09338e9459e668b32",
            "default_security_group_id": "sg-02570c96a48643976",
            "dhcp_options_id": "dopt-0237e9461338e15ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ebb6f501340803c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09338e9459e668b32",
            "owner_id": "631306066855",
            "tags": {
              "Name": "DevSecOps-main"
            },
            "tags_all": {
              "Name": "DevSecOps-main"
            }
          }
        }
      ]
    }
  ]
}